--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "email": "add your email here",
-  "password": "add your pass here"
+  "email": goendoelpunya2@gmail.com,
+  "password": @N0morcantik
 }
